--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -9,8 +9,8 @@
   "days": "{count, plural, =1{Tag} other{Tage}}",
   "connectToSolid": "Mit Solid Pod verbinden",
   "syncAcrossDevices": "Synchronisiere deine Aufgaben über alle Geräte",
-  "enterWebId": "Gib deine WebID oder Solid Pod-URL ein, um die Cloud-Synchronisierung zu aktivieren",
-  "webIdHint": "Deine WebID oder Pod-URL eingeben",
+  "enterWebId": "Gib deine Solid WebID oder Issuer-URL ein, um die Cloud-Synchronisierung zu aktivieren",
+  "webIdHint": "Deine WebID oder Issuer-URL eingeben",
   "webIdExample": "z.B. https://dein-pod-anbieter.de/profile/card#me",
   "connect": "Verbinden",
   "errorConnectingSolid": "Fehler bei der Verbindung mit Solid: {error}",
